# comet

./: .gitignore  README.md
database/: CliHeader.hpp  Cliresolver  Cliresolver.cpp  Dependency_resolver.cpp  Header.hpp  package.db  sql_quries.txt  sqldb.cpp
ground/: Makefile  comet.cpp  command_sanitisation.cppm  finddeps.cpp  main.cpp  test1.cpp
ground/gcm.cache/: command_sanitisation.gcm
ground/gcm.cache/usr/include/c++/15.2.1/: cstdlib.gcm  cstring.gcm  iostream.gcm  vector.gcm
ground/repo/abc 1.0.0/: package.json
samples/: CMakeLists.txt  arith.cpp
samples/arith/: arith.hpp
samples/arith/pack-st/: arith.tar  package.json
samples/main/: CMakeLists.txt  main.cpp
samples/test/: .envrc
